--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
+<script src="%PUBLIC_URL%/script.js"></script>
 
 </html>
